# world-consistency-linter

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: airedale_certificate.txt  harlow_letter.txt  minimal_manifest.yaml  study_plan.txt
scripts/: inspect_distribution.py
tests/: test_cli.py  test_distribution_inspector.py  test_worldlint.py
tests/fixtures/shape_c_real/: manifest.yaml
tests/fixtures/shape_c_real/payload/: HFS_form_QF114_capability_submission.xlsx  PB-1140_capability_study_plan_may2026.docx  line2_pb1140_spigot_cmm_study.csv
world_consistency_linter/: __init__.py  checks.py  cli.py  dates.py  extractors.py  manifest.py  models.py  patterns.py  reports.py
