[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-consistency-linter"
version = "0.3.0"
description = "Offline linter for cross-document world consistency"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "openpyxl>=3.1",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "python-pptx>=0.6.23",
  "pypdf>=4.0",
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing",
]

[project.scripts]
wcl = "world_consistency_linter.cli:main"
world-consistency-linter = "world_consistency_linter.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.8",
  "twine>=6",
]

[tool.setuptools.packages.find]
include = ["world_consistency_linter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
